3mdeb/static/css/blog.css: fixed <table> overflow

--- a/blog/themes/3mdeb/static/css/bulma.css
+++ b/blog/themes/3mdeb/static/css/bulma.css
@@ -2834,6 +2834,8 @@ a.box:active {
 
 .content table {
   width: 100%;
+  display: block;
+  overflow-x: auto;
 }
 
 .content table td,
